# azure-auth-integrator

./: .gitignore  LICENSE  README.md  charmcraft.yaml  config.sh  config.yaml  deploy.sh  deploy2.sh  metadata.yaml  pyproject.toml  renovate.json  tox.ini
.github/workflows/: ci.yaml  release.yaml
lib/charms/azure_auth_integrator/v0/: azure_service_principal.py
lib/charms/data_platform_libs/v0/: azure_service_principal.py
src/: charm.py  constants.py
src/core/: __init__.py  context.py  domain.py
src/events/: base.py  general.py  lifecycle.py  provider.py
src/lib/: azure_service_principal.py
src/managers/: __init__.py  azure_service_principal.py
src/utils/: logging.py  secrets.py
tests/integration/: conftest.py  helpers.py  test_charm.py
tests/integration/test-charm-azure-service-principal/: .charmcraft_output_packages.txt  actions.yaml  charmcraft.yaml  metadata.yaml
tests/integration/test-charm-azure-service-principal/lib/charms/azure_auth_integrator/v0/: azure_service_principal.py
tests/integration/test-charm-azure-service-principal/src/: charm.py
tests/integration/test-charm-azure-service-principal/src/lib/: azure_service_principal.py  azure_service_principal_v1.py
tests/test-charm-azure-service-principal/: charmcraft.yaml
tests/test-charm-azure-service-principal/src/: charm.py
tests/test-charm-azure-service-principal/src/lib/: azure_service_principal.py
tests/unit/: test_charm.py
